--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
             <p></p>
         </section>
     </main>
+
+    <footer>
+        <hr>
+        <p> &copy; 2025 GrandTech. All rights reserved. </p>
+        <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/backlog">Click here</a> </p>
+    </footer>
 </body>
 </html>
