--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
     <header>
         <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="100" height="100">
         <nav>
-            <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="jobs.html">Positions</a></li>
-            <li><a href="apply.html">Application</a></li>
-            </ul>
+            <a href="index.html">Home</a> 
+            <a href="about.html">About</a> 
+            <a href="jobs.html">Positions</a> 
+            <a href="apply.html">Application</a>
         </nav>
     </header>
 
