--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </section>
     </main>
 
+    <!-- Footer section: Bottom section of the web -->
     <footer>
         <hr>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
