--- a/jobs.html
+++ b/jobs.html
@@ -32,7 +32,7 @@
             <ol>
                 <li>IT Support Technician. <a href="#itsup">View</a></li>
                 <li>Software Developer. <a href="#swdev">View</a></li>
-                <li>Cybersecurity Specialist. <a href="">View</a></li>
+                <li>Cybersecurity Specialist. <a href="#cysec">View</a></li>
             </ol>
         </section>
 
@@ -42,6 +42,7 @@
             <p>As an IT Support Technician, you are expected to provide aid to users and organizations technically and make sure their computer systems, software, and devices run smoothly.</p>
             <p>Essential position details:</p>
             <ul>
+                <li>Job reference number: <strong>SP101</strong></li>
                 <li>Salary range: $350-550 per month</li>
                 <li>Responsibilities:
                     <ul>
@@ -55,9 +56,9 @@
                 <li>Requirements:
                     <ul>
                     <li><strong>Education:</strong> Bachelor’s degree in IT, computer science, or related fields. <strong class="required">(essential)</strong></li>
-                    <li><strong>Technical Skills:</strong> Hardware, software and networking basics, along with HTML, CSS and JavaScript knowledge. <strong class="required">(essential)</strong></li>
+                    <li><strong>Technical Knowledge:</strong> Hardware, software and networking basics. <strong class="required">(essential)</strong></li>
                     <li><strong>Soft Skills:</strong> Communication, problem-solving, patience, time management. <strong>(preferrable)</strong></li>
-                    <li><strong>Experience:</strong> 1–2 years of related work experience. <strong>(preferrable)</strong></li>
+                    <li><strong>Experience:</strong> 1+ year of related work experience. <strong>(preferrable)</strong></li>
                     </ul>
                 </li>
             </ul>
@@ -69,6 +70,7 @@
             <p>As a Software Developer, you are responsible for maintaining and improving the company's <strong>GrandTech Hub</strong> application.</p>
             <p>Essential position details:</p>
             <ul>
+                <li>Job reference number: <strong>DV201</strong></li>
                 <li>Salary range: $400-900 per month</li>
                 <li>Responsibilities:
                     <ul>
@@ -81,36 +83,36 @@
                 <li>Requirements:
                     <ul>
                     <li><strong>Education:</strong> Bachelor’s degree in IT, computer science, or related fields. <strong class="required">(essential)</strong></li>
-                    <li><strong>Technical Skills:</strong> JavaScript, C/C++, SQL and Swift knowledge. <strong class="required">(essential)</strong></li>
+                    <li><strong>Technical Knowledge:</strong> JavaScript and C/C++ knowledge. <strong class="required">(essential)</strong></li>
                     <li><strong>Soft Skills:</strong> Problem-solving, logical thinking, teamwork, adaptability. <strong>(preferrable)</strong></li>
-                    <li><strong>Experience:</strong> 1–2 years of related work experience. <strong>(preferrable)</strong></li>
+                    <li><strong>Experience:</strong> 1+ year of related work experience. <strong>(preferrable)</strong></li>
                     </ul>
                 </li>
             </ul>
         </section>
 
-        <!-- IT Support Technician section -->
-        <section>
-            <h2>1. IT Support Technician</h2>
-            <p>As an IT Support Technician, you are expected to provide aid to users and organizations technically and make sure their computer systems, software, and devices run smoothly.</p>
+        <!-- Cybersecurity Specialist section -->
+        <section id="cysec">
+            <h2>3. Cybersecurity Specialist</h2>
+            <p>As a Cybersecurity Specialist, you are responsible for protecting computer systems, networks, and data from cyber threats such as hacking, malware, data breaches, and insider threats.</p>
             <p>Essential position details:</p>
             <ul>
-                <li>Salary range: $20 - $30/hr</li>
+                <li>Job reference number: <strong>SC302</strong></li>
+                <li>Salary range: $400-700 per month</li>
                 <li>Responsibilities:
                     <ul>
-                    <li>Respond to support requests via phone, email, chat, or in person.</li>
-                    <li>Install, configure, and repair desktops, laptops, and peripherals (printers, scanners, monitors).</li>
-                    <li>Update and patch software.</li>
-                    <li>Check and fix basic network issues.</li>
-                    <li>Stay patient and professional, even with frustrated users.</li>
+                    <li>Track network traffic for unusual or malicious activity.</li>
+                    <li>Respond to real-time threats (e.g. intrusion attempts, ransomware).</li>
+                    <li>Manage access controls.</li>
+                    <li>Identify vulnerabilities in systems and applications.</li>
                     </ul>
                 </li>
                 <li>Requirements:
                     <ul>
                     <li><strong>Education:</strong> Bachelor’s degree in IT, computer science, or related fields. <strong class="required">(essential)</strong></li>
-                    <li><strong>Technical Skills:</strong> Hardware, software and networking basics, along with HTML and CSS knowledge. <strong class="required">(essential)</strong></li>
-                    <li><strong>Soft Skills:</strong> Communication, problem-solving, patience, time management. <strong>(preferrable)</strong></li>
-                    <li><strong>Experience:</strong> 1–2 years of related work experience. <strong>(preferrable)</strong></li>
+                    <li><strong>Technical Knowledge:</strong> Networking basics, security tools, risk assessment and incident response skills. <strong class="required">(essential)</strong></li>
+                    <li><strong>Soft Skills:</strong> Analytical thinking, problem-solving under pressure, communication, adaptability. <strong>(preferrable)</strong></li>
+                    <li><strong>Experience:</strong> 2+ years of related work experience. <strong>(preferrable)</strong></li>
                     </ul>
                 </li>
             </ul>
