--- a/jobs.html
+++ b/jobs.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Describes various available positions at GrandTech company">
-    <meta name="keywords" content="GrandTech">
+    <meta name="keywords" content="GrandTech, jobs, positions">
     <meta name="author" content="Duo Levellers">
     <title>GrandTech - Positions</title>
     <link rel="stylesheet" href="styles/styles.css">
@@ -14,7 +14,26 @@
 <body>
     <!-- Header section: Top section of the web -->
     <header>
-        <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="100" height="100">
+        <div class="row">
+            <div class="column">
+            <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="100" height="100">
+            </div>
+            <div class="column">
+            <img src="images/images.jpg" title="banner" alt="banner" width="400" height=100 class="center">
+            </div>
+            <div class="column">
+            <img id="mirror" src="images/images.jpg" title="banner" alt="banner" width="400" height=100 class="center">
+            </div>
+            <div class="column">
+            <img src="images/images.jpg" title="banner" alt="banner" width="400" height=100 class="center">
+            </div>
+        </div>
+
+        <div id="mail" class="row">
+            <p>Contact us via e-mail: </p>
+            <p><a href="mailto:info@grandtech.com.au">info@grandtech.com.au</a></p>
+        </div>
+        
         <nav>
             <a href="index.html">Home</a> 
             <a href="about.html">About</a> 
