--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
 <body>
     <!-- Header section: Top section of the web -->
     <header>
-        <div class="row">
-            <div class="column">
+        <div class="column">
             <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="100" height="100">
-            </div>
-            <div class="column">
-            <img src="images/images.jpg" title="Banner" alt="Banner" width="400" height=100 class="center">
-            </div>
-            <div class="column">
-            <img id="mirror" src="images/images.jpg" title="Banner" alt="Banner" width="400" height=100 class="center">
-            </div>
-            <div class="column">
-            <img src="images/images.jpg" title="Banner" alt="Banner" width="400" height=100 class="center">
-            </div>
         </div>
 
-        <div id="mail" class="row">
+        <div class="column">
+            <img src="images/banner.jpg" title="Banner" alt="Banner" width="400" height="100">
+        </div>
+
+        <div class="column">
+            <img id="mirror" src="images/banner.jpg" title="Banner" alt="Banner" width="400" height="100">
+        </div>
+
+        <div class="column">
+            <img src="images/banner.jpg" title="Banner" alt="Banner" width="400" height="100">
+        </div>
+
+        <div id="mail">
             <p>Contact us via e-mail: </p>
             <a href="mailto:info@grandtech.com.au">info@grandtech.com.au</a>
         </div>
