--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
         <div class="column">
             <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="100" height="100">
         </div>
-
         <div class="column">
             <img src="images/banner.jpg" title="Banner" alt="Banner" width="400" height="100">
         </div>
-
         <div class="column">
             <img id="mirror" src="images/banner.jpg" title="Banner" alt="Banner" width="400" height="100">
         </div>
-
         <div class="column">
             <img src="images/banner.jpg" title="Banner" alt="Banner" width="400" height="100">
         </div>
@@ -56,6 +53,7 @@
         </section>
     </main>
 
+    <!-- Footer section: Bottom section of the web -->
     <footer>
         <hr>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
