--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Main section: Contains the main content of the web -->
     <main>
         <section>
-            <h1>About Us</h1>
+            <h1>About GrandTech</h1>
             <p>The pinnacle of technology.</p>
         </section>
         
@@ -57,7 +57,7 @@
     <footer>
         <hr>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
-        <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/backlog">Click here</a> </p>
+        <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports">Click here</a> </p>
     </footer>
 </body>
 </html>
