--- a/apply.html
+++ b/apply.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <!-- Head section: Contains Web title and Metadata -->
 <head>
     <meta charset="utf-8">
@@ -138,13 +138,13 @@
                     </p>
                 </fieldset>
                 <p>
-                    <label for="other">Other skills</label>
-                    <textarea id="other" name="otherskills" rows="4" cols="40" placeholder="Do you have any other major skills?"></textarea>
+                    <label for="extra">Other skills</label>
+                    <textarea id="extra" name="otherskills" rows="4" cols="40" placeholder="Do you have any other major skills?"></textarea>
                 </p>
             </fieldset>
 
-            <input type= "submit" value="Submit form"/>
-	        <input type= "reset" value="Reset form"/>
+            <input type= "submit" value="Submit form">
+	        <input type= "reset" value="Reset form">
         </form>
     </main>
 
