--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 <!-- Head section: Contains Web title and Metadata -->
 <head>
     <meta charset="utf-8">
@@ -44,30 +44,41 @@
     <main>
         <h1>About Our Group</h1>
         <p>The GrandTech websites were designed by us - the <strong>Duo Levellers</strong>! As the name suggests, our group consists of only <em>2 members</em>, but that will not stop us from trying our best!</p>
+        
+        <section>
         <h2>Our Class</h2>
         <p>Here is some information about our Web Technology Project class:</p>
         <ul>
-            <li><strong>Class:</strong> COS10026.3</li>
-            <ul>
+            <li><strong>Class:</strong> COS10026.3
+                <ul>
                 <li>Class time: 2pm - 5pm</li>
                 <li>Class day: Friday</li>
-            </ul>
+                </ul>
+            </li>
             <li><strong>Tutor:</strong> Mr. Vu Ngoc Binh</li>
         </ul>
+        </section>
+
+        <section>
         <h2>Members</h2>
         <p>Our group consists of 2 members, Hoang Duy and Minh Hieu. Learn more about us below:</p>
         <ol>
-            <li>Nguyen Hoang Duy</li>
-            <ul>
+            <li>Nguyen Hoang Duy
+                <ul>
                 <li>Student ID: 106209395</li>
                 <li>Contact info: <a href="mailto:hoangduy201107@gmail.com">hoangduy201107@gmail.com</a></li>
-            </ul>
-            <li>Le Minh Hieu</li>
-            <ul>
+                </ul>
+            </li>
+            <li>Le Minh Hieu
+                <ul>
                 <li>Student ID: 106205555</li>
                 <li>Contact info: <a href="mailto:leminhhieu9907@gmail.com">leminhhieu9907@gmail.com</a></li>
-            </ul>
+                </ul>
+            </li>
         </ol>
+        </section>
+
+        <section>
         <h3>Contributions</h3>
         <p>Here is a brief description of each member's contributions to the websites:</p>
         <dl>
@@ -76,13 +87,48 @@
             <dt>Le Minh Hieu</dt>
             <dd>Job descriptions and application pages, CSS styling</dd>
         </dl>
+        </section>
+
+        <section>
         <h3>Group Photo</h3>
         <figure>
             <figcaption>Here is a picture of our group members:</figcaption>
             <img src="images/group_photo.jpg" title="Group Photo" alt="This is not a bug, it's intentional." id="grphoto">
         </figure>
-        <h3>Members Interests</h3>
+        </section>
 
+        <section>
+        <h3>Members Interests</h3>
+        <table>
+            <caption>Here is a table of our group members' interests:</caption>
+            <thead>
+				<tr>
+				    <th rowspan="2" scope="col" class="tablecol">Members</th>
+				    <th colspan="3" scope="colgroup">Interests</th>
+				</tr>
+				<tr>
+				    <th scope="col" class="tablecol">Food</th>
+				    <th scope="col" class="tablecol">Drink</th>
+				    <th scope="col" class="tablecol">Game</th>
+				</tr>
+			</thead>
+
+			<tbody>
+			    <tr>
+			        <th scope="row">Hoang Duy</th>
+			        <td></td>
+			        <td></td>
+			        <td></td>
+			    </tr>
+			    <tr>
+			        <th scope="row">Minh Hieu</th>
+			        <td>Pasta</td>
+			        <td>Apple Juice</td>
+			        <td>Rocket League</td>
+			    </tr>
+			</tbody>
+        </table>
+        </section>
     </main>
 
     <!-- Footer section: Bottom section of the web -->
