--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
     <!-- Footer section: Bottom section of the web -->
     <footer>
         <hr>
-        <p> &copy; 2025 GrandTech. All rights reserved </p>
+        <p> &copy; 2025 GrandTech. All rights reserved. </p>
         <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports">Click here</a> </p>
     </footer>
 </body>
