--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
         <section>
         <h2>Members</h2>
         <p>Our group consists of 2 members, Hoang Duy and Minh Hieu. Learn more about us below:</p>
-        <ol>
+        <ol id="memberlist">
             <li>Nguyen Hoang Duy
                 <ul>
                 <li>Student ID: 106209395</li>
