--- a/index.html
+++ b/index.html
@@ -43,13 +43,44 @@
     <!-- Main section: Contains the main content of the web -->
     <main>
         <section>
-            <h1>About GrandTech</h1>
-            <p>The pinnacle of technology.</p>
+            <aside>
+                <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="200" height="200">
+                <p><em>GrandTech Logo</em></p>
+            </aside>
+            <h1>Introduction</h1>
+            <h2><strong>Welcome to GrandTech</strong></h2>
+            <p><strong>Innovating Tomorrow. Pioneering Today.</strong></p>
+            <p>GrandTech is more than just a tech company — it powers imagination. From intelligent software to malleable infrastructure and advanced AI-powered systems, we create technology that drives real-world impact.<br>
+            Our team is passionate about solving complex challenges with intelligent and flexible solutions that help businesses grow, adapt, and lead in a tech-driven era. Whether you're a startup, enterprise, or public sector leader, GrandTech delivers the tools and tech to move you forward.</p>
+            <p><strong>Let’s build what’s next — together.</strong></p>
         </section>
         
-        <section>
+        <section class="clear">
+            <aside>
+                <img src="images/0411_programming.jpg" title="Facilities and Working Environment" alt="Facilities and Working Environment" width="253" height="150">
+                <p><em>Facilities and Working Environment</em></p>
+            </aside>
+            <h1>About Us</h1>
+            <h2>Powering Imagination - Engineering the Future</h2>
+            <p>Founded with a vision to redefine innovation, GrandTech is a forward-thinking technology company committed to delivering intelligent, scalable, and impactful solutions. Whether it's powering businesses with cutting-edge software, enabling digital transformation, or pioneering advancements in AI and cloud computing, we bring expertise, agility, and vision to everything we do.
+            Our team is a diverse group of engineers, designers, strategists, and problem-solvers driven by one goal: to create tech that makes life simpler, smarter, and more connected. With a strong focus on quality, security, and user experience, GrandTech is trusted by clients across industries to turn complex challenges into competitive advantages.
+            From startups to global enterprises, we partner with organizations that are ready to embrace the future — and we help them lead it.</p>
+            <p><strong>Innovation starts here. Welcome to GrandTech.</strong></p>
+        </section>
+
+        <section class="margintop">
             <h1>Achievements</h1>
-            <p>Winner of Oscar 2025 Awards</p>
+            <ol>
+                <li>Winner of Oscar 2025 Awards</li>
+                <li>First Place in Kindergarten Foundation Coding (KFC)</li>
+                <li>mercury was in retrograde</li>
+                <li>Alongsides many others...
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">2024 Achievements</a></li>
+                    <li><a href="https://www.youtube.com/shorts/KuIGCNWL3ik">2025 Achievements</a></li>
+                </ul>
+                </li>
+            </ol>
         </section>
     </main>
 
@@ -58,6 +89,7 @@
         <hr>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
         <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports">Click here</a> </p>
+        <p>Image source: <a href="https://news.cornell.edu">Click here</a></p>
     </footer>
 </body>
 </html>
