--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <!-- Main section: Contains the main content of the web -->
     <main>
         <section>
-            <aside>
+            <figure class="illupic">
                 <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="200" height="200">
-                <p><em>GrandTech Logo</em></p>
-            </aside>
+                <figcaption><em>GrandTech Logo</em></figcaption>
+            </figure>
             <h1>Introduction</h1>
             <h2><strong>Welcome to GrandTech</strong></h2>
             <p><strong>Innovating Tomorrow. Pioneering Today.</strong></p>
@@ -56,10 +56,10 @@
         </section>
         
         <section class="clear">
-            <aside>
-                <img src="images/0411_programming.jpg" title="Facilities and Working Environment" alt="Facilities and Working Environment" width="253" height="150">
-                <p><em>Facilities and Working Environment</em></p>
-            </aside>
+            <figure class="illupic">
+                <img src="images/0411_programming.jpg" title="Facilities and Working Environment" alt="Facilities and Working Environment" width="253" height="150">    <!-- Image source: https://news.cornell.edu -->
+                <figcaption><em>Facilities and Working Environment</em></figcaption>
+            </figure>
             <h1>About Us</h1>
             <h2>Powering Imagination - Engineering the Future</h2>
             <p>Founded with a vision to redefine innovation, GrandTech is a forward-thinking technology company committed to delivering intelligent, scalable, and impactful solutions. Whether it's powering businesses with cutting-edge software, enabling digital transformation, or pioneering advancements in AI and cloud computing, we bring expertise, agility, and vision to everything we do.
@@ -87,9 +87,12 @@
     <!-- Footer section: Bottom section of the web -->
     <footer>
         <hr>
+        <div id="footlink">
+            <p> GitHub link: <a href="https://github.com/106205555/project1" target="_blank">Click here</a> </p>
+            <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports" target="_blank">Click here</a> </p>
+            <p>Image source: <a href="https://news.cornell.edu" target="_blank">Click here</a></p>
+        </div>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
-        <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports">Click here</a> </p>
-        <p>Image source: <a href="https://news.cornell.edu">Click here</a></p>
     </footer>
 </body>
 </html>
