--- a/jobs.html
+++ b/jobs.html
@@ -139,8 +139,11 @@
     <!-- Footer section: Bottom section of the web -->
     <footer>
         <hr>
+        <div id="footlink">
+            <p> GitHub link: <a href="https://github.com/106205555/project1" target="_blank">Click here</a> </p>
+            <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports" target="_blank">Click here</a> </p>
+        </div>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
-        <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports">Click here</a> </p>
     </footer>
 </body>
 </html>
