--- a/apply.html
+++ b/apply.html
@@ -37,6 +37,7 @@
             <a href="about.html">About</a> 
             <a href="jobs.html">Positions</a> 
             <a href="apply.html">Application</a>
+            <a href="index.html">張り切って行こう！！！</a>
         </nav>
     </header>
 
