--- a/apply.html
+++ b/apply.html
@@ -50,7 +50,7 @@
                 </p>
                 <p>
                     <label for="dob">Date of birth</label>
-                    <input type="text" id="dob" name="dob" placeholder="dd/mm/yyyy"
+                    <input type="date" id="dob" name="dob" placeholder="dd/mm/yyyy" maxlength="10" size="10"
                            pattern="(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[012])/\d{4}" required>
                 </p>
                 <fieldset>
