--- a/about.html
+++ b/about.html
@@ -86,14 +86,14 @@
         <h3>Group Photo</h3>
         <figure>
             <figcaption>Here is a picture of our group members:</figcaption>
-            <img src="images/group_photo.jpg" title="Group Photo" alt="This is not a bug, it's intentional." id="grphoto">
+            <img src="images/44CD5886-4E83-4407-8039-DB879B2F32AA.webp" title="Group Photo" alt="This is not a bug, it's intentional." id="grphoto" width:200px height=200px>
         </figure>
         </section>
-
         <section>
-        <h3>Members Interests</h3>
+        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
         <table>
-            <caption>Here is a table of our group members' interests:</caption>
+            <caption><h3>Members Interests</h3>
+                <p>Here is a table of our group members' interests:</p></caption>
             <thead>
 				<tr>
 				    <th rowspan="2" scope="col" class="tablecol">Members</th>
@@ -109,9 +109,9 @@
 			<tbody>
 			    <tr>
 			        <th scope="row">Hoang Duy</th>
-			        <td></td>
-			        <td></td>
-			        <td></td>
+			        <td>Crème brûlée</td>
+			        <td>water</td>
+			        <td>ウマ娘：プリティーダービー</td>
 			    </tr>
 			    <tr>
 			        <th scope="row">Minh Hieu</th>
