--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p><strong>Innovation starts here. Welcome to GrandTech.</strong></p>
         </section>
 
-        <section class="margintop">
+        <section>
             <h1>Achievements</h1>
             <ol>
                 <li>Winner of Oscar 2025 Awards</li>
