--- a/jobs.html
+++ b/jobs.html
@@ -35,8 +35,13 @@
 
     <!-- Main section: Contains the main content of the web -->
     <main>
+        <aside>
+            <h2>Important notice</h2>
+            <p><em>Please note that application will be closed before 15 Oct 2025, so please apply now to ensure your opportunity.</em></p>
+        </aside>
+        
         <section>
-            <h1>Available positions</h1>
+            <h1 id="jobdesctitle">Available positions</h1>
             <p>Want to be a part of GrandTech? We are still open to new applications!</p>
             <p>View a list of available positions now:</p>
             <ol>
@@ -127,17 +132,14 @@
                 </li>
             </ul>
         </section>
+
+        <p><em>Ready to apply for a position?</em> <a href="apply.html">Apply now</a></p>
     </main>
 
     <!-- Footer section: Bottom section of the web -->
-    <footer>
+    <footer id="descfoot">
         <hr>
-        <div id="footlink">
-            <p> GitHub link: <a href="https://github.com/106205555/project1" target="_blank">Click here</a> </p>
-            <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports" target="_blank">Click here</a> </p>
-        </div>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
     </footer>
 </body>
 </html>
-<!---->
