--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
         </section>
 
         <section>
-        <h2>Members</h2>
-        <p>Our group consists of 2 members, Hoang Duy and Minh Hieu. Learn more about us below:</p>
+        <p><h2>Members</h2>
+        Our group consists of 2 members, Hoang Duy and Minh Hieu. Learn more about us below:</p>
         <ol id="memberlist">
             <li>Nguyen Hoang Duy
                 <ul>
@@ -62,6 +62,7 @@
                 <li>Contact info: <a href="mailto:hoangduy201107@gmail.com">hoangduy201107@gmail.com</a></li>
                 </ul>
             </li>
+            <br>
             <li>Le Minh Hieu
                 <ul>
                 <li>Student ID: 106205555</li>
@@ -72,11 +73,12 @@
         </section>
 
         <section>
-        <h3>Contributions</h3>
-        <p>Here is a brief description of each member's contributions to the websites:</p>
+        <p><h2>Contributions</h2>
+        Here is a brief description of each member's contributions to the websites:</p>
         <dl>
             <dt>Nguyen Hoang Duy</dt>
             <dd>Home page, common menu section, group details page, CSS styling</dd>
+             <br>
             <dt>Le Minh Hieu</dt>
             <dd>Job descriptions and application pages, CSS styling</dd>
         </dl>
