--- a/apply.html
+++ b/apply.html
@@ -16,7 +16,7 @@
     <header>
         <div class="column">
             <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="100" height="100">
-            <img id="banner" src="images/7E95A2E0-185F-4C72-8F71-460A1BBA1FFD.webp" title="Banner" alt="Banner" width="1200" height="100">
+            <img id="banner" src="images/7E95A2E0-185F-4C72-8F71-460A1BBA1FFD.webp" title="Banner" alt="Banner" width=auto height="100">
         </div>
         <div class="column" id="mail">
             <p>Contact us via e-mail: </p>
