--- a/apply.html
+++ b/apply.html
@@ -129,7 +129,8 @@
                     </p>
                 </fieldset>
                 <p>
-                    <label for="extra">Other skills</label>
+                    <label for="extra">Other skills:</label>
+                    <br>
                     <textarea id="extra" name="otherskills" rows="4" cols="40" placeholder="Do you have any other major skills?"></textarea>
                 </p>
             </fieldset>
@@ -140,12 +141,8 @@
     </main>
 
     <!-- Footer section: Bottom section of the web -->
-    <footer class="clear">
+    <footer class="clear" id="descfoot">
         <hr>
-        <div id="footlink">
-            <p> GitHub link: <a href="https://github.com/106205555/project1" target="_blank">Click here</a> </p>
-            <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports" target="_blank">Click here</a> </p>
-        </div>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
     </footer>
 </body>
