--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
 
-    <!-- Main section: Contains the main content of the web -->
-    <main>
+    <!-- Article section: Contains the main content of the web -->
+    <article>
         <section>
             <figure class="illupic">
                 <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="200" height="200">
@@ -60,29 +60,14 @@
             From startups to global enterprises, we partner with organizations that are ready to embrace the future — and we help them lead it.</p>
             <p><strong>Innovation starts here. Welcome to GrandTech.</strong></p>
         </section>
-
-        <section>
-            <h1>Achievements</h1>
-            <ol>
-                <li>Winner of Oscar 2025 Awards</li>
-                <li>First Place in Kindergarten Foundation Coding (KFC)</li>
-                <li>mercury was in retrograde</li>
-                <li>Alongsides many others...
-                <ul>
-                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">2024 Achievements</a></li>
-                    <li><a href="https://www.youtube.com/shorts/KuIGCNWL3ik">2025 Achievements</a></li>
-                </ul>
-                </li>
-            </ol>
-        </section>
-    </main>
+    </article>
 
     <!-- Footer section: Bottom section of the web -->
-    <footer>
+    <footer id="homefoot">
         <hr>
         <div id="footlink">
             <p> GitHub link: <a href="https://github.com/106205555/project1" target="_blank">Click here</a> </p>
-            <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports" target="_blank">Click here</a> </p>
+            <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/backlog" target="_blank">Click here</a> </p>
             <p>Image source: <a href="https://news.cornell.edu" target="_blank">Click here</a></p>
         </div>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
