--- a/jobs.html
+++ b/jobs.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
 
-    <!-- Main section: Contains the main content of the web -->
-    <main>
+    <!-- Article section: Contains the main content of the web -->
+    <article>
         <aside>
             <h2>Important notice</h2>
             <p><em>Please note that application will be closed before 15 Oct 2025, so please apply now to ensure your opportunity.</em></p>
@@ -134,7 +134,7 @@
         </section>
 
         <p><em>Ready to apply for a position?</em> <a href="apply.html">Apply now</a></p>
-    </main>
+    </article>
 
     <!-- Footer section: Bottom section of the web -->
     <footer id="descfoot">
@@ -143,4 +143,4 @@
     </footer>
 </body>
 </html>
- 
+<!-- Job Desc source: https://chatgpt.com/ -->
