--- a/about.html
+++ b/about.html
@@ -33,89 +33,86 @@
         </nav>
     </header>
 
-    <!-- Main section: Contains the main content of the web -->
-    <main>
-        <h1>About Our Group</h1>
-        <p>The GrandTech websites were designed by us - the <strong>Duo Levellers</strong>! As the name suggests, our group consists of only <em>2 members</em>, but that will not stop us from trying our best!</p>
+    <!-- Article section: Contains the main content of the web -->
+    <article id="abtpage">
+        <section>
+            <h1>About Our Group</h1>
+            <p>The GrandTech websites were designed by us - the <strong>Duo Levellers</strong>! As the name suggests, our group consists of only <em>2 members</em>, but that will not stop us from trying our best!</p>
+            <p>Learn more about us below!</p>
+        </section>
         
-        <section id="ab">
-        <h2>Our Class</h2>
-        <p>Here is some information about our Web Technology Project class:</p>
-        <ul>
-            <li><strong>Class:</strong> COS10026.3
-                <ul>
-                <li>Class time: 2pm - 5pm</li>
-                <li>Class day: Friday</li>
-                </ul>
-            </li>
-             <br>
-            <li><strong>Tutor:</strong> Mr. Vu Ngoc Binh</li>
-        </ul>
-        </section>
-        <section id="ab">
-        <p><h2>Members</h2>
-        Our group consists of 2 members, Hoang Duy and Minh Hieu. Learn more about us below:</p>
-        <ol id="memberlist">
-            <li>Nguyen Hoang Duy
-                <ul>
-                <li>Contact info: <a href="mailto:hoangduy201107@gmail.com">hoangduy201107@gmail.com</a></li>
-            </li>
-            <br>
-                </ul>
-            <li>Le Minh Hieu
-                <ul>
-                <li>Contact info: <a href="mailto:leminhhieu9907@gmail.com">leminhhieu9907@gmail.com</a></li>
-                </ul>
-            </li>
-        </ol>
-        <section id="sid">
-            <p>Our Student IDs:</p>
-            <ol id="memberlist">
-                    <li>Nguyen Hoang Duy
-                <ul>
-                <li>ID: 106209395</li>
-            </li>
-            <br>
-                </ul>
-            <li>Le Minh Hieu
-                <ul>
-                    <li>ID: 106205555</li>
-            </li>
-        </ol>
-        </section>
-        </section>
-        <section id="ab">
-        <p><h2>Contributions</h2>
-        Here is a brief description of each member's contributions to the websites:</p>
-        <dl>
-            <dt>Nguyen Hoang Duy</dt>
-            <dd>Home page, common menu section, group details page, CSS styling</dd>
-             <br>
-            <dt>Le Minh Hieu</dt>
-            <dd>Job descriptions and application pages, CSS styling</dd>
-        </dl>
+        <section id="ourclass">
+            <h2>Our Class</h2>
+            <p>Here is some information about our Web Technology Project class:</p>
+            <ul id="classinfo">
+                <li><strong>Class:</strong> COS10026.3
+                    <ul>
+                    <li>Class time: 2pm - 5pm</li>
+                    <li>Class day: Friday</li>
+                    </ul>
+                </li>
+                <br>
+                <li><strong>Tutor:</strong> Mr. Vu Ngoc Binh</li>
+            </ul>
         </section>
 
-        <aside id="png">
-        <h3>Group Photo</h3>
-        <figure>
-            <figcaption>Here is a picture of our group members:</figcaption>
-            <img src="images/44CD5886-4E83-4407-8039-DB879B2F32AA.webp" title="Group Photo" alt="This is not a bug, it's intentional." id="grph" width=200px height=200px>
-        </figure>
-        </aside>
+        <section id="members">
+            <h2>Members</h2>
+            <p>Our group consists of 2 members, Hoang Duy and Minh Hieu. Learn more about us below:</p>
+            <ol id="memberlist">
+                <li>Nguyen Hoang Duy
+                    <ul>
+                    <li>Student ID: 106209395</li>
+                    <li>Contact info: <a href="mailto:hoangduy201107@gmail.com">hoangduy201107@gmail.com</a></li>
+                    </ul>
+                </li>
+                <br>
+                <li>Le Minh Hieu
+                    <ul>
+                    <li>Student ID: 106205555</li>
+                    <li>Contact info: <a href="mailto:leminhhieu9907@gmail.com">leminhhieu9907@gmail.com</a></li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+
+        <section id="contributions">
+            <h2>Contributions</h2>
+            <p>Here is a brief description of each member's contributions to the websites:</p>
+            <dl>
+                <dt>Nguyen Hoang Duy</dt>
+                <dd>Home page, common menu section, group details page, CSS styling</dd>
+                <br>
+                <dt>Le Minh Hieu</dt>
+                <dd>Job descriptions and application pages, CSS styling</dd>
+            </dl>
+        </section>
+
+        <section id="png">
+            <figure>
+                <figcaption>
+                    <h2>Group Photo</h2>
+                    <p>Here is a picture of our group members:</p>
+                </figcaption>
+                <img src="images/44CD5886-4E83-4407-8039-DB879B2F32AA.webp" title="Group Photo" alt="Group Photo" id="grph" width=200px height=200px>
+            </figure>
+        </section>
+
         <section class="clear">
         <table>
-            <caption><h3>Members Interests</h3>
-                <p>Here is a table of our group members' interests:</p></caption>
+            <caption>
+                <h2>Members Interests</h2>
+                <p>Here is a table of our group members' interests:</p>
+            </caption>
             <thead>
 				<tr>
-				    <th rowspan="2" scope="col" class="tablecol">Members</th>
+				    <th rowspan="2" scope="col">Members</th>
 				    <th colspan="3" scope="colgroup">Interests</th>
 				</tr>
 				<tr>
-				    <th scope="col" class="tablecol">Food</th>
-				    <th scope="col" class="tablecol">Drink</th>
-				    <th scope="col" class="tablecol">Game</th>
+				    <th scope="col">Food</th>
+				    <th scope="col">Drink</th>
+				    <th scope="col">Game</th>
 				</tr>
 			</thead>
 
@@ -135,15 +132,11 @@
 			</tbody>
         </table>
         </section>
-    </main>
+    </article>
 
     <!-- Footer section: Bottom section of the web -->
-    <footer>
+    <footer id="descfoot">
         <hr>
-        <div id="footlink">
-            <p> GitHub link: <a href="https://github.com/106205555/project1" target="_blank">Click here</a> </p>
-            <p> Jira link: <a href="https://leminhhieu9907.atlassian.net/jira/software/projects/SCRUM/boards/1/reports" target="_blank">Click here</a> </p>
-        </div>
         <p> &copy; 2025 GrandTech. All rights reserved. </p>
     </footer>
 </body>
