--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
 
-    <!-- Article section: Contains the main content of the web -->
-    <article id="abtpage">
+    <!-- Main section: Contains the main content of the web -->
+    <main id="abtpage">
         <section>
             <h1>About Our Group</h1>
             <p>The GrandTech websites were designed by us - the <strong>Duo Levellers</strong>! As the name suggests, our group consists of only <em>2 members</em>, but that will not stop us from trying our best!</p>
@@ -49,9 +49,8 @@
                     <ul>
                     <li>Class time: 2pm - 5pm</li>
                     <li>Class day: Friday</li>
-                    </ul>
+                    </ul><br>
                 </li>
-                <br>
                 <li><strong>Tutor:</strong> Mr. Vu Ngoc Binh</li>
             </ul>
         </section>
@@ -64,9 +63,8 @@
                     <ul>
                     <li>Student ID: 106209395</li>
                     <li>Contact info: <a href="mailto:hoangduy201107@gmail.com">hoangduy201107@gmail.com</a></li>
-                    </ul>
+                    </ul><br>
                 </li>
-                <br>
                 <li>Le Minh Hieu
                     <ul>
                     <li>Student ID: 106205555</li>
@@ -82,7 +80,7 @@
             <dl>
                 <dt>Nguyen Hoang Duy</dt>
                 <dd>Home page, common menu section, group details page, CSS styling</dd>
-                <br>
+                <dd><br></dd>
                 <dt>Le Minh Hieu</dt>
                 <dd>Job descriptions and application pages, CSS styling</dd>
             </dl>
@@ -94,7 +92,7 @@
                     <h2>Group Photo</h2>
                     <p>Here is a picture of our group members:</p>
                 </figcaption>
-                <img src="images/44CD5886-4E83-4407-8039-DB879B2F32AA.webp" title="Group Photo" alt="Group Photo" id="grph" width=200px height=200px>
+                <img src="images/44CD5886-4E83-4407-8039-DB879B2F32AA.webp" title="Group Photo" alt="Group Photo" id="grph" width="200" height="200">
             </figure>
         </section>
 
@@ -132,7 +130,7 @@
 			</tbody>
         </table>
         </section>
-    </article>
+    </main>
 
     <!-- Footer section: Bottom section of the web -->
     <footer id="descfoot">
