--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </nav>
     </header>
 
-    <!-- Article section: Contains the main content of the web -->
-    <article>
+    <!-- Main section: Contains the main content of the web -->
+    <main>
         <section>
             <figure class="illupic">
                 <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="200" height="200">
@@ -60,7 +60,7 @@
             From startups to global enterprises, we partner with organizations that are ready to embrace the future — and we help them lead it.</p>
             <p><strong>Innovation starts here. Welcome to GrandTech.</strong></p>
         </section>
-    </article>
+    </main>
 
     <!-- Footer section: Bottom section of the web -->
     <footer id="homefoot">
