--- a/jobs.html
+++ b/jobs.html
@@ -33,15 +33,15 @@
         </nav>
     </header>
 
-    <!-- Article section: Contains the main content of the web -->
-    <article>
+    <!-- Main section: Contains the main content of the web -->
+    <main>
         <aside>
             <h2>Important notice</h2>
             <p><em>Please note that application will be closed before 15 Oct 2025, so please apply now to ensure your opportunity.</em></p>
         </aside>
         
         <section>
-            <h1 id="jobdesctitle">Available positions</h1>
+            <h1>Available positions</h1>
             <p>Want to be a part of GrandTech? We are still open to new applications!</p>
             <p>View a list of available positions now:</p>
             <ol>
@@ -134,7 +134,7 @@
         </section>
 
         <p><em>Ready to apply for a position?</em> <a href="apply.html">Apply now</a></p>
-    </article>
+    </main>
 
     <!-- Footer section: Bottom section of the web -->
     <footer id="descfoot">
