--- a/apply.html
+++ b/apply.html
@@ -16,7 +16,7 @@
     <header>
         <div class="column">
             <img src="images/GrandTech_logo.png" title="GrandTech Logo" alt="GrandTech Logo" width="100" height="100">
-            <img id="banner" src="images/7E95A2E0-185F-4C72-8F71-460A1BBA1FFD.webp" title="Banner" alt="Banner" width=auto height="100">
+            <img id="banner" src="images/7E95A2E0-185F-4C72-8F71-460A1BBA1FFD.webp" title="Banner" alt="Banner" width="1200" height="100">
         </div>
         <div class="column" id="mail">
             <p>Contact us via e-mail: </p>
@@ -32,7 +32,7 @@
     </header>
 
     <!-- Main section: Contains the main content of the web -->
-    <main>
+    <main id="formmain">
         <h1>Application Form</h1>
         <p>Please fill in your details carefully.</p>
         <form method="post" action="https://mercury.swin.edu.au/it000000/formtest.php">
@@ -48,8 +48,7 @@
                 </p>
                 <p>
                     <label for="dob">Date of birth</label>
-                    <input type="date" id="dob" name="dob" placeholder="dd/mm/yyyy" maxlength="10" size="10"
-                           pattern="(0[1-9]|[12][0-9]|3[01])/(0[1-9]|1[012])/\d{4}" required>
+                    <input type="date" id="dob" name="dob" size="10" required>
                 </p>
                 <fieldset>
                     <legend>Gender</legend>
